frontend/tests/errors/ER-018/std_math_array_lift_mixed_scalar_array/test.vx
// @rfc: docs/vexel-rfc.md#name-resolution--modules
// @desc: Bundled std::math array lifting rejects non-broadcast-compatible shapes. | std::math array lifting rejects incompatible broadcast shapes

::std::math;

&^main() -> #i32 {
  xs:#f64[2] = [1.0, 4.0];
  ys:#f64[3] = [2.0, 3.0, 4.0];
  zs:#f64[2] = std::math::pow(xs, ys);
  0
}
